ex2/testdata/parser/error/boolean.java
/**
 * Created by alka on 5/11/2017.
 */
class TestCaseserror {
    public static void main(String [] args)
    {
        int v;
        v=10;
 

	v= false +true;
    }
}
